--- a/hgal.cabal
+++ b/hgal.cabal
@@ -1,21 +1,65 @@
+cabal-version: 1.12
+
+-- This file has been generated from package.yaml by hpack version 0.35.1.
+--
+-- see: https://github.com/sol/hpack
+
 name:           hgal
 version:        2.0.0.2
+synopsis:       library for computation automorphism group and canonical labelling of a graph
+description:    Please see the README on GitHub at <https://github.com/marcellussiegburg/hgal#readme>
+category:       data structures, algorithms
+homepage:       https://github.com/marcellussiegburg/hgal#readme
+bug-reports:    https://github.com/marcellussiegburg/hgal/issues
+author:         Jean-Philippe Bernardy
+maintainer:     marcellus.siegburg@uni-due.de
 license:        GPL
 license-file:   LICENSE
-author:         Jean-Philippe Bernardy
-maintainer:     jeanphilippe.bernardy (google mail)
-synopsis:       library for computation automorphism group and canonical labelling of a graph
-Category:       data structures, algorithms
-exposed-modules:
-        Data.Graph.Partition,
-        Data.Graph.Construction,
-        Data.Graph.Permutation,
-        Data.Graph.Automorphism
-
-build-depends: base>= 4 && < 5,
-               mtl >= 2 && < 3,
-               containers >= 0.4 && < 1,
-               array >= 0.3 && < 1
-
 build-type:     Simple
-ghc-options:    -Wall -O2
+extra-source-files:
+    README.md
+    LICENSE
+
+source-repository head
+  type: git
+  location: https://github.com/marcellussiegburg/hgal
+
+library
+  exposed-modules:
+      Data.Graph.Partition
+      Data.Graph.Construction
+      Data.Graph.Permutation
+      Data.Graph.Automorphism
+  other-modules:
+      Paths_hgal
+  hs-source-dirs:
+      ./
+  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Widentities -Wredundant-constraints
+  build-depends:
+      array >=0.3 && <0.6
+    , base ==4.*
+    , containers >=0.4 && <0.7
+    , mtl >=2 && <2.4
+  default-language: Haskell2010
+
+test-suite hgal-test
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  other-modules:
+      Bench
+      Shuffle
+      Sudoku
+      Paths_hgal
+  hs-source-dirs:
+      tests
+  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Widentities -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      QuickCheck
+    , array >=0.3 && <0.6
+    , base ==4.*
+    , containers >=0.4 && <0.7
+    , hgal
+    , mtl >=2 && <2.4
+    , old-time
+    , random
+  default-language: Haskell2010
