--- a/hgal.cabal
+++ b/hgal.cabal
@@ -37,7 +37,7 @@ library
   ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Widentities -Wredundant-constraints
   build-depends:
       array >=0.3 && <0.6
-    , base ==4.*
+    , base >=4.11 && <5
     , containers >=0.4 && <0.7
     , mtl >=2 && <2.4
   default-language: Haskell2010
@@ -56,8 +56,9 @@ test-suite hgal-test
   build-depends:
       QuickCheck
     , array >=0.3 && <0.6
-    , base ==4.*
+    , base >=4.11 && <5
     , containers >=0.4 && <0.7
+    , extra
     , hgal
     , mtl >=2 && <2.4
     , old-time
