--- a/.github/workflows/haskell.yaml
+++ b/.github/workflows/haskell.yaml
@@ -23,85 +23,85 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-    - name: Install ${{ matrix.os }} Packages
-      uses: delgurth/get-package@v6.0.0
-      with:
-        apt-get: ${{ matrix.apt-get }}
-        brew: ${{ matrix.brew }}
-    - uses: actions/checkout@v3
+      - name: Install ${{ matrix.os }} Packages
+        uses: delgurth/get-package@v6.0.0
+        with:
+          apt-get: ${{ matrix.apt-get }}
+          brew: ${{ matrix.brew }}
+      - uses: actions/checkout@v4
 
-    - name: Cache Stack on unix
-      id: cache-stack-unix
-      uses: actions/cache@v3
-      with:
-        path: ~/.stack
-        key: ${{ matrix.os }}-${{ matrix.plan.build }}-stack-home-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}
-        restore-keys: |
-          ${{ runner.os }}-stack-global-${{ matrix.plan.resolver }}-${{ hashFiles('stack.yaml') }}
-          ${{ runner.os }}-stack-global-${{ matrix.plan.resolver }}
-          ${{ runner.os }}-stack-global-
-      if: contains(matrix.os, 'windows') == false
+      - name: Cache Stack on unix
+        id: cache-stack-unix
+        uses: actions/cache@v4
+        with:
+          path: ~/.stack
+          key: ${{ matrix.os }}-${{ matrix.plan.build }}-stack-home-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-stack-global-${{ matrix.plan.resolver }}-${{ hashFiles('stack.yaml') }}
+            ${{ runner.os }}-stack-global-${{ matrix.plan.resolver }}
+            ${{ runner.os }}-stack-global-
+        if: contains(matrix.os, 'windows') == false
 
-    - name: Cache Stack on windows
-      id: cache-stack-windows
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~\AppData\Roaming\stack
-          ~/AppData/Local/Programs/stack
-        key: ${{ matrix.os }}-${{ matrix.plan.build }}-stack-home-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}
-        restore-keys: |
-          ${{ runner.os }}-stack-global-${{ matrix.plan.resolver }}-${{ hashFiles('stack.yaml') }}
-          ${{ runner.os }}-stack-global-${{ matrix.plan.resolver }}
-          ${{ runner.os }}-stack-global-
-      if: contains(matrix.os, 'windows')
+      - name: Cache Stack on windows
+        id: cache-stack-windows
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~\AppData\Roaming\stack
+            ~/AppData/Local/Programs/stack
+          key: ${{ matrix.os }}-${{ matrix.plan.build }}-stack-home-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-stack-global-${{ matrix.plan.resolver }}-${{ hashFiles('stack.yaml') }}
+            ${{ runner.os }}-stack-global-${{ matrix.plan.resolver }}
+            ${{ runner.os }}-stack-global-
+        if: contains(matrix.os, 'windows')
 
-    - uses: actions/cache@v3
-      name: Cache .stack-work
-      with:
-        path: .stack-work
-        key: ${{ runner.os }}-stack-work-${{ matrix.plan.resolver }}-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}-${{ hashFiles('**/*.hs') }}
-        restore-keys: |
-          ${{ runner.os }}-stack-work-${{ matrix.plan.resolver }}-${{ hashFiles('stack.yaml') }}
-          ${{ runner.os }}-stack-work-${{ matrix.plan.resolver }}
-          ${{ runner.os }}-stack-work-
+      - uses: actions/cache@v4
+        name: Cache .stack-work
+        with:
+          path: .stack-work
+          key: ${{ runner.os }}-stack-work-${{ matrix.plan.resolver }}-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}-${{ hashFiles('**/*.hs') }}
+          restore-keys: |
+            ${{ runner.os }}-stack-work-${{ matrix.plan.resolver }}-${{ hashFiles('stack.yaml') }}
+            ${{ runner.os }}-stack-work-${{ matrix.plan.resolver }}
+            ${{ runner.os }}-stack-work-
 
-    - name: Setup stack
-      uses: haskell/actions/setup@v2
-      with:
-        enable-stack: true
-        stack-no-global: true
+      - name: Setup stack
+        uses: haskell-actions/setup@v2
+        with:
+          enable-stack: true
+          stack-no-global: true
 
-    - name: Install dependencies on unix
-      run: |
-        set -ex
-        stack --no-terminal --install-ghc $ARGS test --bench --only-dependencies
-        set +ex
-      env:
-        ARGS: ${{ matrix.plan.resolver }}
-      if: contains(matrix.os, 'windows') == false
+      - name: Install dependencies on unix
+        run: |
+          set -ex
+          stack --no-terminal --install-ghc $ARGS test --bench --only-dependencies
+          set +ex
+        env:
+          ARGS: ${{ matrix.plan.resolver }}
+        if: contains(matrix.os, 'windows') == false
 
-    - name: Install dependencies on windows
-      shell: powershell
-      run: |
-        stack --no-terminal --install-ghc ${env:ARGS} test --bench --only-dependencies
-      env:
-        ARGS: ${{ matrix.plan.resolver }}
-      if: contains(matrix.os, 'windows')
+      - name: Install dependencies on windows
+        shell: powershell
+        run: |
+          stack --no-terminal --install-ghc ${env:ARGS} test --bench --only-dependencies
+        env:
+          ARGS: ${{ matrix.plan.resolver }}
+        if: contains(matrix.os, 'windows')
 
-    - name: Build & test on unix
-      run: |
-        set -ex
-        stack --no-terminal --install-ghc $ARGS test --coverage --bench --no-run-benchmarks --haddock --no-haddock-deps --test-arguments="--maximum-generated-tests=50"
-        set +ex
-      env:
-        ARGS: ${{ matrix.plan.resolver }}
-      if: contains(matrix.os, 'windows') == false
+      - name: Build & test on unix
+        run: |
+          set -ex
+          stack --no-terminal --install-ghc $ARGS test --coverage --bench --no-run-benchmarks --haddock --no-haddock-deps --test-arguments="--maximum-generated-tests=50"
+          set +ex
+        env:
+          ARGS: ${{ matrix.plan.resolver }}
+        if: contains(matrix.os, 'windows') == false
 
-    - name: Build & test on windows
-      shell: powershell
-      run: |
-        stack --no-terminal --install-ghc ${env:ARGS} test --coverage --bench --no-run-benchmarks --haddock --test-arguments="--maximum-generated-tests=50"
-      env:
-        ARGS: ${{ matrix.plan.resolver }}
-      if: contains(matrix.os, 'windows')
+      - name: Build & test on windows
+        shell: powershell
+        run: |
+          stack --no-terminal --install-ghc ${env:ARGS} test --coverage --bench --no-run-benchmarks --haddock --test-arguments="--maximum-generated-tests=50"
+        env:
+          ARGS: ${{ matrix.plan.resolver }}
+        if: contains(matrix.os, 'windows')
